[package]
name = "migrate-core"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Vitalii Kryvenko <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "README.md"
description = """
    Generic interface for managing the migration state.
"""

[dependencies]
async-trait = "0.1"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
migrate-state = { version = "0.1", path = "../migrate-state" }
thiserror = "1.0"

[dev-dependencies]
expect-test = "1.1"
