[package]
name = "migrate-dynamodb-state"
version = "0.1.0"
authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
migrate-state = { version = "0.1", path = "../migrate-state" }
rusoto_core = { version = "0.46", features = ["rustls"], default_features = false }
rusoto_dynamodb = { version = "0.46", features = ["rustls"], default_features = false }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.3", features = ["full"] }
migrate-core = { version = "0.1", path = "../migrate-core" }
migrate-state-test = { version = "0.1", path = "../migrate-state-test" }
