[package]
name = "migrate-state-file"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Veetaha <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "../README.md"
description = """
    Migrations state storage implementation that uses a file on the filsystem as a backend
"""

[dependencies]
async-trait = "0.1"
advisory-lock = "0.3"
fs-err = "2.6"
thiserror = "1.0"
tokio = { version = "1.10", features = ["full"] }
migrate-state = { version = "0.1", path = "../migrate-state" }

[dev-dependencies]
migrate-state-test = { version = "0.1", path = "../migrate-state-test" }
migrate-core = { version = "0.1", path = "../migrate-core" }
