[package]
name = "migrate-state-test"
version = "0.1.0"
authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrate-state = { version = "0.1", path = "../migrate-state" }
futures = "0.3"
tokio = { version = "1.3", features = ["full"] }
