[package]
name = "migrate-state-test"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Veetaha <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "../README.md"
description = """
    Already-written tests for implementations of `migrate_state` traits
"""

[dependencies]
migrate-state = { version = "0.1", path = "../migrate-state" }
futures = "0.3"
tokio = { version = "1.10", features = ["full"] }
