[package]
name = "migrate-state"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Veetaha <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "../README.md"
description = """
    Generic interface for managing the migrations state storage.
"""

[dependencies]
async-trait = "0.1"
