[package]
name = "migrate"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Vitalii Kryvenko <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "README.md"
description = """
    Generic interface and CLI application for managing any kind of migrations.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
anyhow = "1.0"
strum = "0.19.2"
strum_macros = "0.19.2"

migrate-core = { path = "../migrate-core", version = "0.1.0" }
