[package]
name = "migrate"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Vitalii Kryvenko <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "README.md"
description = """
    Generic interface and CLI application for managing any kind of migrations.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrate-core = { path = "../migrate-core", version = "0.1" }
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
color-eyre = "0.5"
migrate-file-state = { path = "../migrate-file-state", version = "0.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.3", features = ["full"] }
tracing-subscriber = { version = "0.2" }
