[package]
name = "migrate"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

authors = ["Vitalii Kryvenko <veetaha2@gmail.com>"]
homepage = "https://github.com/Veetaha/migrate"
repository = "https://github.com/Veetaha/migrate"
keywords = ["migration", "migrate", "database"]
categories = ["development-tools"]
readme = "README.md"
description = """
    Generic interface and CLI application for managing any kind of migrations.
"""

[dependencies]
migrate-core = { path = "../migrate-core", version = "0.1" }
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
color-eyre = "0.5"
doc-comment = "0.3"
migrate-state-file = { path = "../migrate-state-file", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.10", features = ["full"] }
tracing-subscriber = { version = "0.2" }
rusoto_dynamodb = "0.47"
